Delete Console.log in all js and delete comments in controlador

--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ DB_CHARSET = "utf8"
 URL_BASE = "http://localhost/proyecto_constancia"
 NOMBRE_PROYECTO = "-"
 NOMBRE_PROYECTO_REAL = "proyecto_constancia"
-NOMBRE_LOGO_PROYECTO = "<b>Sis</b>CDI"
+NOMBRE_LOGO_PROYECTO = "<b>SIS</b>CNS"
 
 COLOR_TEMA = ""
 COLOR_NAV_HORIZONTAL = "danger"
