--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ DB_PASSWORD = ""
 DB_CHARSET = "utf8"
 
 URL_BASE = "http://localhost/proyecto_constancia"
+# URL_BASE = "https://148.224.202.150/constancia/proyecto_constancia"  
 NOMBRE_PROYECTO = "-"
 NOMBRE_PROYECTO_REAL = "proyecto_constancia"
 NOMBRE_LOGO_PROYECTO = "<b>SIS</b>CNS"
